tests/classes/errors/undef_method.bl
class Foo {
    fun bar() -> Unit {}
}

var f: Foo = Foo()

f.baz();
